tests/csmith/bad/smith001546.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1546
 * Seed:      1546
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S0 {
    volatile uint64_t  f0;
   int32_t  f1;
   int32_t  f2;
   uint32_t  f3;
};

/* --- GLOBAL VARIABLES --- */
struct S0 g_2 = {0x2BA394643CDF98A5LL,0xC17633EFL,1L,0x17F75960L};/* VOLATILE GLOBAL g_2 */


/* --- FORWARD DECLARATIONS --- */
struct S0  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_2
 * writes:
 */
struct S0  func_1(void)
{ /* block id: 0 */
    return g_2;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_2.f0 = %d\n", g_2.f0);
    printf("checksum g_2.f1 = %d\n", g_2.f1);
    printf("checksum g_2.f2 = %d\n", g_2.f2);
    printf("checksum g_2.f3 = %d\n", g_2.f3);
}

/************************ statistics *************************
XXX max struct depth: 1
breakdown:
   depth: 0, occurrence: 0
   depth: 1, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 1

XXX total number of pointers: 0

XXX times a non-volatile is read: 1
XXX times a non-volatile is write: 0
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 2

XXX percentage a fresh-made variable is used: 100
XXX percentage an existing variable is used: 0
********************* end of statistics **********************/

